# rslib

./: .gitignore  LICENSE  README.md  __init__.py  io.py  pyproject.toml  requirements.txt
io/btsbioengineering/: read.py
pylab/: __init__.py  read.py  utils.py
pylab/io/: __init__.py
pylab/io/btsbioengineering/: __init__.py  read.py
pylab/io/tdf/: __init__.py  read.py
pylab/src/pylab/io/: __init__.py
rslib/: __init__.py  signalprocessing.py  utils.py
rslib/io/: __init__.py  btsbioengineering.py  cosmed.py
rslib/io/btsbioengineering/: read.py
src/: __init__.py  signalprocessing.py
src/rslib/: __init__.py  lsreg.py  signalprocessing.py  utils.py
src/rslib/io/: __init__.py  _util.py  btsbioengineering.py  cosmed.py
src/rslib/io/read/: __init__.py  btsbioengineering.py  cosmed.py  opensim.py
src/rslib/io/write/: __init__.py  opensim.py
src/rslib/regression/: __init__.py  huber.py  ols.py
test/: test.py
tests/: __init__.py  test.py
tests/assets/read/: read.mot  read.trc  read.xlsx
tests/assets/write/: write.mot  write.trc
tests/src/: __init__.py  io.py  regression.py  signalprocessing.py  utils.py
