[build-system]
requires = ["setuptools>=67.7", "pandas>=2.0", "scipy>=1.10", "wheel", "openpyxl"]
build-backend = "setuptools.build_meta"

[project]
name = "rslib"
version = "0.2"
authors = [
  { name="Luca Zoffoli", email="lzoffoli@technogym.com" },
]
description = "A small package to simplify data processing in python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ZofTG/rslib"
"Bug Tracker" = "https://github.com/ZofTG/rslib/issues"
