[build-system]
requires = [
    "setuptools",
    "wheel",
    "pandas==2.0.2",
    "scipy==1.10.1",
    "openpyxl==3.1.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "rslib"
authors = [{ name="Luca Zoffoli", email="lzoffoli@technogym.com" }]
description = "A small package to simplify data processing in python."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "rslib.VERSION"}
readme = {file = "README.md"}

[project.urls]
"Homepage" = "https://github.com/ZofTG/rslib"
"Bug Tracker" = "https://github.com/ZofTG/rslib/issues"
